2009-02-11 09:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Revert some changes from
	previous modification.  Corrects issue with submenus showing up
	when they shouldn't.

2009-02-11 01:31-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Remove call to deprecated method.
	* GormCore/GormInternalViewEditor.m: Minor cleanup
	* GormObjCHeaderParser/OCMethod.m: Minor cleanup
	* Palettes/2Controls/GormNSTextFieldInspector.gorm: Correct issue
	with misspelled outlet name.

2009-02-02 17:13-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormButtonAttributesInspector.[hm]:
	Added code to handle button style.
	* Palettes/2Controls/GormNSButtonInspector.gorm: Added button
	style popup to the inspector.

2009-02-01 09:20-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormBoxEditor.m
	* GormCore/GormInternalViewEditor.m
	* GormCore/GormViewWithSubviewsEditor.m: Changes to support
	standalone views.

2009-01-31 18:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: Allow addition of plain NSView to
	a gorm file.

2009-01-25 09:47-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewWindow.m: Change the color used for standalone
	views.

2009-01-25 07:54-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Fix memory leak.

2009-01-25 07:00-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist: Change version to 1.2.9 (SVN) unstable.

2009-01-25 06:50-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Display the in certain situations.
	* Palettes/0Menus/GormNSMenu.m: Remove call to setMenu: in 
	_createWindow since it's not needed and was causing display issues.
	* Palettes/0Menus/GormNSMenuView.m: Use new method in NSMenuView