@@ -1,3 +1,8 @@
+2009-03-03 18:17-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormClassInspector.m: Change the cell to scrollable
+	to allow long action/outlet names.
+
 2009-02-11 09:22-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/0Menus/GormMenuEditor.m: Revert some changes from
